{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 483,
  "lineage": "69eae506-8b71-6265-cc10-f3e4c5cabe0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:019088769801:loadbalancer/tf-lb-20220326212306756300000003",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220326212306756300000003-1763178970.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20220326212306756300000003",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20220326212306756300000003",
            "security_groups": [
              "sg-00b01069ee3f6deec"
            ],
            "source_security_group": "019088769801/terraform-20220326212254764300000001",
            "source_security_group_id": "sg-00b01069ee3f6deec",
            "subnets": [
              "subnet-07d7caa2492992623",
              "subnet-0c44b91c0a19e3801"
            ],
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform LB",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform LB",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_aws_instance_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e0b06f01d45a4eb",
            "arn": "arn:aws:ec2:us-east-1:019088769801:instance/i-0ccd30a9d436c57c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccd30a9d436c57c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e84fd6c717fe55a",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_ip": "10.0.1.209",
            "public_dns": "ec2-44-200-7-49.compute-1.amazonaws.com",
            "public_ip": "44.200.7.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d93fcb5131ab0917",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d7caa2492992623",
            "tags": {
              "Env": "DEV",
              "Name": " DEV - Public terraform web instance ",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": " DEV - Public terraform web instance ",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b01069ee3f6deec"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet_a",
            "aws_vpc.my_vpc",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.aws_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:internet-gateway/igw-070db9bacd1dd3c8f",
            "id": "igw-070db9bacd1dd3c8f",
            "owner_id": "019088769801",
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform internet gateway",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform internet gateway",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:route-table/rtb-0fb87948ab547aaa7",
            "id": "rtb-0fb87948ab547aaa7",
            "owner_id": "019088769801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070db9bacd1dd3c8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:route-table/rtb-02e7435d5fbde2668",
            "id": "rtb-02e7435d5fbde2668",
            "owner_id": "019088769801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070db9bacd1dd3c8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035c6941d678cc835",
            "route_table_id": "rtb-0fb87948ab547aaa7",
            "subnet_id": "subnet-07d7caa2492992623"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b587dfbc06ac32b",
            "route_table_id": "rtb-02e7435d5fbde2668",
            "subnet_id": "subnet-0c44b91c0a19e3801"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:security-group/sg-00b01069ee3f6deec",
            "description": "Security group for aws  by id",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b01069ee3f6deec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220326212254764300000001",
            "name_prefix": "terraform-",
            "owner_id": "019088769801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform dynamic sec group",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform dynamic sec group",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:subnet/subnet-07d7caa2492992623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7caa2492992623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019088769801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform public subnet 1a",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform public subnet 1a",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:subnet/subnet-0c44b91c0a19e3801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c44b91c0a19e3801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019088769801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform public subnet 1b",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform public subnet 1b",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "vpc_id": "vpc-0268664ca866e72c2"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019088769801:vpc/vpc-0268664ca866e72c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043693fb5dde0d891",
            "default_route_table_id": "rtb-0be950b401b1d04af",
            "default_security_group_id": "sg-0ba64920ee3baf9a4",
            "dhcp_options_id": "dopt-02495ccdda0243dd8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0268664ca866e72c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be950b401b1d04af",
            "owner_id": "019088769801",
            "tags": {
              "Env": "DEV",
              "Name": "DEV - Terraform VPC",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "DEV - Terraform VPC",
              "Owner": "Gleb Mojeico",
              "Version": "v1.1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}